--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -134,7 +134,7 @@
         <div class='item-img-content'>        
           <%= image_tag item.image, class: "item-img" %>
 
-          <% if item.blank? %>
+          <% if item.purchase %>
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
