タグの保存、一覧、編集実装

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -55,6 +55,10 @@
           <td class="detail-value"><%= @item.category.name %></td>
         </tr>
         <tr>
+          <th class="detail-item">タグ</th>
+          <td class="detail-value"><%= @item.tags&.first&.tag_name %></td>
+        </tr>
+        <tr>
           <th class="detail-item">商品の状態</th>
           <td class="detail-value"><%= @item.condition.name %></td>
         </tr>
