タグ付け機能と逐次検索機能の実装

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -44,6 +44,7 @@
         </div>
       </div>
       <%= f.text_area :tag_name, class:"items-text", id:"item-tag", placeholder:"タグ名（必須 20文字まで)", maxlength:"20" %>
+      <div id="search-result"></div>
     </div>
     <%# /商品名と商品説明 %>
 
