--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -46,6 +46,7 @@ app/assets/stylesheets/items/new.css %>
         </div>
       </div>
       <%= f.text_area :tag_name, class:"items-text", id:"item-tag", placeholder:"タグ名（必須 20文字まで)", maxlength:"20" %>
+      <div id="search-result"></div>
     </div>
     <%# /商品名と商品説明 %>
 
