--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,8 +7,8 @@
     今すぐ無料ダウンロード！
   </h2>
   <div class='store-btn'>
-    <%= link_to image_tag("app-store.svg", class:"apple-btn"), "#" %>
-    <%= link_to image_tag("google-play.png", class:"google-btn"), "#" %>
+    <%= link_to image_tag(asset_path("app-store.svg"), class:"apple-btn"), "#" %>
+    <%= link_to image_tag(asset_path("google-play.png"), class:"google-btn"), "#" %>
   </div>
 </div>
 <%# /下部広告部分 %>
@@ -40,6 +40,6 @@
       </ul>
     </div>
   </div>
-  <%= link_to image_tag("furima-logo-white.png", class:"logo-white"), "#" %>
+  <%= link_to image_tag(asset_path("furima-logo-white.png"), class:"logo-white"), "#" %>
   <p>© FURIMA</p>
 </div>
