試験的にpathを追加

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -26,7 +26,7 @@
     </h2>
     <ul class='reason-lists'>
       <li class='list'>
-        <%= image_tag asset_path("furima-intro01.png"), class:"list-pict" %>
+        <%= image_tag asset_path("/images/furima-intro01.png"), class:"list-pict" %>
         <span class='reason-list-number'>1</span>
         <h3 class='reason-list-text'>
           <span class='reason-list-blue-text'>3分</span>
