--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,12 +1,12 @@
 <%# CSS・・・assets/stylesheets/shared/header.css %>
 <header class='top-page-header'>
   <div class='search-bar-contents'>
-    <%= link_to image_tag(asset_path("/images/furima-logo-color.png"), class:"furima-icon"), "/" %>
+    <%= link_to image_tag("furima-logo-color.png", class:"furima-icon"), "/" %>
       <%= search_form_for Item.ransack(params[:q]), url: tag_search_items_path, html: {class: "search-form"} do |f| %>
       <%= f.text_field :product, placeholder: '商品名から探す', class: 'input-box' %>
       <br>
       <%= f.label :submit, class: "search-button" do %>
-        <%= image_tag ("/images/search.png"), class:"search-icon" %>
+        <%= image_tag ("search.png"), class:"search-icon" %>
         <%= f.submit :submit, id: "q_submit", style: "display: none;"%>
       <% end %>
     <% end %>
